# skrut_ai_web

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: job_description.txt
backend/services/: ai.py  ocr.py
backend/tests/: test_ai_logic.py  test_api.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/components/: CTA.tsx  ComparisonTable.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  WavyDivider.tsx  WhatIsSkrut.tsx
frontend/app/contact/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/results/latest/: layout.tsx  page.tsx
frontend/app/terms-of-service/: page.tsx
frontend/app/upload/: layout.tsx  page.tsx
